# swvkc

./: LICENSE  NOTES.md  README.md  XYZZY.md  atomic.c  atomic.h  gbm.c  gbm_.h  globals.c  input.c  input.h  legacy_wl_drm.c  legacy_wl_drm_.h  loop.c  main.c  meson.build  meson_options.txt  modeset.c  modeset.h  my_vulkan.c  swvkc.c  wayland.c  wayland.h  xkb.c  xkb.h
backend/: bufmgr_gbm.c  bufmgr_intel.c  dev.c  direct.c  input.c  screen.c  vulkan.c  vulkan_display.c
core/: compositor.c  data_device_manager.c  data_source.c  keyboard.c  seat.c  subsurface.c  wl_pointer.c  wl_subcompositor.c  wl_subsurface.c  wl_surface.c
extensions/: xdg_shell.c
extensions/fullscreen-shell-unstable-v1/: zwp_fullscreen_shell_v1.c
extensions/linux-dmabuf-unstable-v1/: wl_buffer_dmabuf.c  zwp_linux_buffer_params_v1.c  zwp_linux_dmabuf_v1.c
extensions/linux-explicit-synchronization-v1/: zwp_linux_buffer_release_v1.c  zwp_linux_explicit_synchronization_v1.c  zwp_linux_surface_synchronization_v1.c
extensions/server-decoration/: org_kde_kwin_server_decoration.c
extensions/xdg_shell/: xdg_popup.c  xdg_positioner.c  xdg_surface.c  xdg_toplevel.c  xdg_wm_base.c
include/: legacy_wl_drm.h  my_vulkan.h  server.h  swvkc.h
include/backend/: bufmgr.h  dev.h  direct.h  input.h  screen.h  vulkan.h
include/core/: compositor.h  data_device.h  data_source.h  keyboard.h  output.h  region.h  seat.h  wl_subcompositor.h  wl_subsurface.h  wl_surface.h
include/extensions/: xdg_shell.h
include/extensions/linux-dmabuf-unstable-v1/: wl_buffer_dmabuf.h  zwp_linux_buffer_params_v1.h  zwp_linux_dmabuf_v1.h
include/extensions/linux-explicit-synchronization-v1/: zwp_linux_buffer_release_v1.h  zwp_linux_surface_synchronization_v1.h
include/extensions/server-decoration/: org_kde_kwin_server_decoration.h  org_kde_kwin_server_decoration_manager.h
include/extensions/xdg_shell/: xdg_positioner.h  xdg_surface.h  xdg_toplevel.h  xdg_wm_base.h
include/protocols/: fullscreen-shell-unstable-v1.h  linux-dmabuf-unstable-v1-server-protocol.h  xdg-shell-server-protocol.h
include/util/: algebra.h  box.h  log.h  my_drm_handle_event.h  util.h
protocols/: fullscreen-shell-unstable-v1.c  linux-dmabuf-unstable-v1-code.c
src/: legacy_wl_drm.c  main.c  meson.build  swvkc.c
src/backend/: bufmgr_gbm.c  bufmgr_intel.c  dev.c  input.c  meson.build  screen.c  vulkan.c
src/util/: meson.build  my_drm_handle_event.c
subprojects/libswvkc-wl/: globals.c  meson.build
subprojects/libswvkc-wl/core/: compositor.c  data_device.c  data_device_manager.c  data_offer.c  data_source.c  keyboard.c  output.c  region.c  seat.c  subsurface.c  wl_pointer.c  wl_subcompositor.c  wl_surface.c
subprojects/libswvkc-wl/extensions/fullscreen-shell-unstable-v1/: zwp_fullscreen_shell_v1.c
subprojects/libswvkc-wl/extensions/linux-dmabuf-unstable-v1/: wl_buffer_dmabuf.c  zwp_linux_buffer_params_v1.c  zwp_linux_dmabuf_v1.c
subprojects/libswvkc-wl/extensions/linux-explicit-synchronization-v1/: zwp_linux_explicit_synchronization_v1.c
subprojects/libswvkc-wl/extensions/server-decoration/: org_kde_kwin_server_decoration_manager.c
subprojects/libswvkc-wl/extensions/xdg_shell/: xdg_surface.c  xdg_wm_base.c
subprojects/libswvkc-wl/include/: globals.h
subprojects/libswvkc-wl/include/core/: data_device.h  data_device_manager.h  data_offer.h  data_source.h  keyboard.h  seat.h  subsurface.h  wl_pointer.h  wl_surface.h  wl_surface_staged_field.h
subprojects/libswvkc-wl/include/extensions/fullscreen-shell-unstable-v1/: zwp_fullscreen_shell_v1.h
subprojects/libswvkc-wl/include/extensions/linux-dmabuf-unstable-v1/: wl_buffer_dmabuf.h
subprojects/libswvkc-wl/include/extensions/linux-explicit-synchronization-v1/: zwp_linux_explicit_synchronization_v1.h  zwp_linux_surface_synchronization_v1.h
subprojects/libswvkc-wl/include/extensions/xdg_shell/: xdg_popup.h  xdg_surface.h  xdg_toplevel.h  xdg_wm_base.h
subprojects/libswvkc-wl/include/util/: log.h  util.h
subprojects/libswvkc-wl/util/: algebra.c  log.c  util.c
trash/: direct.c  dmabuf_map.c  intel_bo.c  vulkan_avoid_same_memory_reimport.c
util/: log.c  util.c
